--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Dependencies Installation
         run: npm install
       - name: Build and Publish
-        run: npm run build:dev-feed && npm run publish -w=dev-feed
+        run: npm run build:dev-feed && npm run publish -w=packages/dev-feed
         env:
           NODE_AUTH_TOKEN: ${{ secrets.ORG_NPM_TOKEN }}
 
@@ -38,6 +38,6 @@ jobs:
       - name: Dependencies Installation
         run: npm install
       - name: Build and Publish
-        run: npm run build:dev-kit && npm run publish -w=dev-kit
+        run: npm run build:dev-kit && npm run publish -w=packages/dev-kit
         env:
           NODE_AUTH_TOKEN: ${{ secrets.ORG_NPM_TOKEN }}
