build(dev-kit): enable public access on publish and updated GitHub actions workflow to work with npm provenance compliance

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,9 @@ jobs:
   release_dev-feed:
     if: github.repository == 'Skrigueztep/dev-utils' && contains(github.event.head_commit.message, 'dev-feed')
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
