--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,6 +30,9 @@ jobs:
   release_dev-kit:
     if: github.repository == 'Skrigueztep/dev-utils' && contains(github.event.head_commit.message, 'dev-kit')
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
